--- a/jetbrains-mono-nerd-font.css
+++ b/jetbrains-mono-nerd-font.css
@@ -11,7 +11,7 @@
 @font-face {
     font-family: "JetBrains Mono Nerd Font";
     font-weight: 300;
-    src: url("https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/JetBrainsMono/Ligatures/Light/complete/JetBrains%20Mono%20Light%20Nerd%20Font%20Complete%20Mono.ttf") format('truetype');
+    src: url("https://github.com/ryanoasis/nerd-fonts/raw/master/patched-fonts/JetBrainsMono/Ligatures/Light/JetBrainsMonoNerdFontMono-Light.ttf") format('truetype');
 }
 @font-face {
     font-family: "JetBrains Mono Nerd Font";
